test add multer(upload userImg)

--- a/.env
+++ b/.env
@@ -7,6 +7,4 @@ BCRYPT_SALT= 12
 JWT_SECRET= aiGhfaosJRafeTWHjiov
 JWT_EXPIRES_IN=2592000
 
-
-
-
+CLOUDINARY_URL=cloudinary://937381117675363:PWPdYo7L7Dw_2ZwPtfnnt7siKgY@dqns1bgvx
