--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "sharp": "^0.28.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
